fixed joinor and cleaned up loop, added YAML options

--- a/lesson_6/tic.yml
+++ b/lesson_6/tic.yml
@@ -4,6 +4,21 @@ player_first: "Player will move first!"
 computer_first: "Computer will make the first move."
 get_move: "Choose a space"
 invalid_move: "Sorry, that's not a valid choice."
+computer_will_move_1: "Hmm, what's the best move..."
+computer_will_move_2: "Trying a different strategy..."
+computer_will_move_3: "SUPER AI ENGAGED."
+computer_will_move_4: "Do you think the result will be different?"
+computer_will_move_5: "Why do you even bother?"
+computer_will_move_6: "I think you made a mistake."
+computer_will_move_7: "Am I programmed correctly?"
+computer_will_move_8: "Remember, this game is free."
+computer_will_move_9: "Do you feel good beating a computer?"
+computer_will_move_10: "Look behind you!"
+computer_will_move_11: "I don't really get this game..."
+computer_will_move_12: "Wow, I think you're cheating..."
+computer_will_move_13: "Do we have to compete?"
+computer_will_move_14: "Why can't we just share the grid?"
+computer_will_move_15: "I'm having fun now..."
 choice: |
   Choose a weapon or its abbreviation:
   rock (r)
