--- a/lesson_6/tic_esp.yml
+++ b/lesson_6/tic_esp.yml
@@ -4,3 +4,18 @@ player_first: "¡La jugadora se moverá primero!"
 computer_first: "El ordenador dará el primer paso."
 get_move: "Elige un espacio"
 invalid_move: "Lo siento, esa no es una opción válida."
+computer_will_move_1: "La computadora hará su movimiento ahora."
+computer_will_move_2: "Probar una estrategia diferente..."
+computer_will_move_3: "Soy una computadora súper inteligente."
+computer_will_move_4: "A nadie le gustas."
+computer_will_move_5: "Ni siquiera te molestes, soy demasiado fuerte."
+computer_will_move_6: "Creo que cometiste un error."
+computer_will_move_7: "¿Estoy bien programado?"
+computer_will_move_8: "Recuerda, este juego es gratis."
+computer_will_move_9: "¿Te sientes bien golpeando una computadora?"
+computer_will_move_10: "¡Mira detrás tuyo!"
+computer_will_move_11: "¿Por qué los humanos piensan que esto es divertido?"
+computer_will_move_12: "Obviamente estás haciendo trampa."
+computer_will_move_13: "¿Tenemos que competir?"
+computer_will_move_14: "¿Por qué no podemos simplemente compartir la cuadrícula?"
+computer_will_move_15: "Ahora me divierto.."
