--- a/lesson_6/tic_esp.yml
+++ b/lesson_6/tic_esp.yml
@@ -19,3 +19,8 @@ computer_will_move_12: "Obviamente estás haciendo trampa."
 computer_will_move_13: "¿Tenemos que competir?"
 computer_will_move_14: "¿Por qué no podemos simplemente compartir la cuadrícula?"
 computer_will_move_15: "Ahora me divierto.."
+player_win: "¡Tú ganas! ¡Felicidades!"
+comp_win: "Ganó la computadora. Lo siento."
+tie: "Es un empate. Muy divertido."
+thank_you: "¡Gracias por jugar!"
+again: "¿Te gustaría volver a jugar? (Y o N)"
