added bonus features and score track

--- a/lesson_6/tic.yml
+++ b/lesson_6/tic.yml
@@ -24,3 +24,5 @@ comp_win: "The computer won. Sorry."
 tie: "It's a tie! Wasn't that a blast?"
 thank_you: "Thank you for playing!"
 again: "Would you like to play again? (Y or N)"
+player_victory: "You won the match! You're a tic-tac-toe master!"
+computer_victory: "The computer won the match. Condolences."
