--- a/lesson_6/tic_esp.yml
+++ b/lesson_6/tic_esp.yml
@@ -24,3 +24,5 @@ comp_win: "Ganó la computadora. Lo siento."
 tie: "Es un empate. Muy divertido."
 thank_you: "¡Gracias por jugar!"
 again: "¿Te gustaría volver a jugar? (Y o N)"
+player_victory: "¡Ganaste el partido! Felicidades."
+computer_victory: "La computadora ganó el partido. Condolencias."
