ready for first code review

--- a/lesson_6/tic.yml
+++ b/lesson_6/tic.yml
@@ -26,3 +26,4 @@ thank_you: "Thank you for playing!"
 again: "Would you like to play again? (Y or N)"
 player_victory: "You won the match! You're a tic-tac-toe master!"
 computer_victory: "The computer won the match. Condolences."
+not_valid_play_again: "Sorry, that's not a valid choice. Pick Y or N."
