--- a/lesson_6/tic_esp.yml
+++ b/lesson_6/tic_esp.yml
@@ -23,6 +23,7 @@ player_win: "¡Tú ganas! ¡Felicidades!"
 comp_win: "Ganó la computadora. Lo siento."
 tie: "Es un empate. Muy divertido."
 thank_you: "¡Gracias por jugar!"
-again: "¿Te gustaría volver a jugar? (Y o N)"
+again: "¿Te gustaría volver a jugar? (S o N)"
 player_victory: "¡Ganaste el partido! Felicidades."
 computer_victory: "La computadora ganó el partido. Condolencias."
+not_valid_play_again: "Lo siento, eso no es válido. Elija S o N."
